# Magnus-Carblunder

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
examples/: battle.rs
src/: bitboards.rs  castling_rights.rs  color.rs  direction.rs  eval.rs  game_controller.rs  gui.rs  lib.rs  main.rs  mov.rs  piece.rs  position.rs  state_info.rs  undo.rs
src/attacks/: king.rs  knight.rs  mod.rs  movegen.rs  pawn.rs  sliding.rs
src/attacks/tables/: bishop_attacks.rs  bishop_shifts.rs  knight_moves.rs  mod.rs  pawn_attacks.rs  rook_masks.rs
src/engines/: constants.rs  engine_manager.rs  eval_weight.rs  history.rs  mod.rs  pv.rs  stats.rs  transposition_table.rs
src/engines/evaluate/: e1.rs  e2.rs  e3.rs  mod.rs
src/engines/search/: mod.rs  s1.rs  s10.rs  s11.rs  s12.rs  s13.rs  s14.rs  s2.rs  s3.rs  s4.rs  s5.rs  s6.rs  s7.rs  s8.rs  s9.rs  simplified1.rs  simplified10.rs  simplified11.rs  simplified12.rs  simplified13.rs  simplified14.rs  simplified15.rs  simplified2.rs  simplified3.rs  simplified4.rs  (+6 more)
src/simulator/: engine_battle_simulator.rs  even_fens.rs  mod.rs
src/tables/: between_exclusive.rs  between_inclusive.rs  bishop_attacks.rs  bishop_magics.rs  bishop_masks.rs  bishop_shifts.rs  king_moves.rs  line_bb.rs  mod.rs  rays.rs  rook_magics.rs  rook_shifts.rs  zobrist.rs
table_gen/: between_exclusive.rs  between_inclusive.rs  bishop.rs  bitboards.rs  king.rs  knight.rs  line_bb.rs  mod.rs  pawn.rs  rook.rs  zobrists_randoms.rs
tests/: engines.rs  eval_checker.rs  perft_positions.rs  perft_suite.rs  position.rs  see.rs  zobrist_positions.rs
