[package]
name = "chess"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4.14", features = ["audio"] }
indicatif = "0.18.0"
rand = "0.9.2"
funtime = "0.3.1"
statrs = "0.18.0"

[build-dependencies]
rand = "0.9.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true


